recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:3: error: not found: value lenght
    forward(lenght);
            ^