recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(steps!=0){
  	forward(lenght);
  	left(angle);
  	spiral(steps-1,angle,length+increment,increment);

  }
}